--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,17 +31,11 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
       
       - name: Set env
-        run: |
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          pwd
-          ls
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Clone TizenTube to assets
         working-directory: androidApp/app/src/main/assets
-        run: |
-          ls
-          pwd
-          git clone https://github.com/reisxd/TizenTube.git tizentube
+        run: git clone https://github.com/reisxd/TizenTube.git tizentube
       
       - name: Install TizenTube modules
         working-directory: androidApp/app/src/main/assets/tizentube
@@ -58,7 +52,9 @@ jobs:
         
       - name: Build Release apk
         working-directory: androidApp/
-        run: ./gradlew build
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build
 
       - name: Upload Release Build to Artifacts
         uses: actions/upload-artifact@v3
