refactor: delete apps to gain more space

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           npm i
           rm -rf .git
+          rm -rf apps
         
       - name: Install TizenTube Mods modules and Build it
         working-directory: androidApp/app/src/main/assets/tizentube/mods
