--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,4 +68,6 @@ jobs:
         with:
           generate_release_notes: true
           tag_name: ${{ env.RELEASE_VERSION }}
-          files: androidApp/app/build/outputs/apk/debug/app-debug.apk
+          files: |
+            androidApp/app/build/outputs/apk/debug/app-armeabi-v7a-debug.apk
+            androidApp/app/build/outputs/apk/debug/app-arm64-v8a-debug.apk
