--- a/androidApp/app/build.gradle
+++ b/androidApp/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdk 26
         compileSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
@@ -20,10 +20,6 @@ android {
                 arguments "-DANDROID_STL=c++_shared"
             }
         }
-        ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
-        }
-
     }
 
     buildTypes {
@@ -40,6 +36,15 @@ android {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
             version '3.18.1'
+        }
+    }
+
+     splits {
+            abi {
+                enable true
+                reset()
+                include "armeabi-v7a", "arm64-v8a"
+                universalApk false
         }
     }
 }
