--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "appId": "Ad6NutHP8l.TizenTube",
     "tvIP": "192.168.1.2",
-    "debug": false
+    "debug": false,
+    "isTizen3": false
 }
