--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "GPL-3.0-only",
   "dependencies": {
+    "adbhost": "^0.0.2",
     "node-fetch": "^3.3.1",
     "ws": "^8.13.0"
   }
