--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@foxreis/tizentube",
-  "version": "1.2.0",
+  "appName": "TizenTube",
+  "version": "1.2.1",
   "description": "TizenTube is an ad-free and sponsor-free solution for your favourite streaming website on your Tizen (Samsung) TVs.",
   "packageType": "mods",
   "websiteURL": "https://youtube.com/tv",
