feat: fixing ui

--- a/mods/package.json
+++ b/mods/package.json
@@ -15,7 +15,7 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.3",
     "rollup": "^3.26.2",
-    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-string": "^3.0.0",
     "tiny-sha256": "^1.0.2",
     "whatwg-fetch": "^3.6.2"
   }
