--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@foxreis/tizentube",
   "appName": "TizenTube",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "description": "TizenTube is an ad-free and sponsor-free solution for your favourite streaming website on your Tizen (Samsung) TVs.",
   "packageType": "mods",
   "websiteURL": "https://youtube.com/tv",
   "main": "dist/userScript.js",
   "author": "Reis Can",
+  "serviceFile": "dist/service.js",
   "keys": ["MediaPlayPause"],
   "repository": {
     "url": "https://github.com/reisxd/TizenTube"
