feat: casting while in app

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@foxreis/tizentube",
   "appName": "TizenTube",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "TizenTube is an ad-free and sponsor-free solution for your favourite streaming website on your Tizen (Samsung) TVs.",
   "packageType": "mods",
-  "websiteURL": "https://youtube.com/tv",
+  "websiteURL": "https://youtube.com/tv?additionalDataUrl=http%3A%2F%2Flocalhost%3A8085%2Fdial%2Fapps%2FYouTube",
   "main": "dist/userScript.js",
   "author": "Reis Can",
   "serviceFile": "dist/service.js",
