--- a/service/package.json
+++ b/service/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@patrickkfkan/peer-dial": "^0.1.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
