--- a/mods/package.json
+++ b/mods/package.json
@@ -12,11 +12,17 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@babel/preset-env": "^7.22.9",
+    "@formatjs/intl-displaynames": "^6.8.13",
+    "@formatjs/intl-getcanonicallocales": "^2.5.6",
+    "@formatjs/intl-locale": "^4.2.13",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.3",
     "rollup": "^3.26.2",
     "rollup-plugin-string": "^3.0.0",
     "tiny-sha256": "^1.0.2",
     "whatwg-fetch": "^3.6.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.3"
   }
 }
