--- a/mods/package.json
+++ b/mods/package.json
@@ -17,12 +17,14 @@
     "@formatjs/intl-locale": "^4.2.13",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.3",
+    "core-js": "^3.46.0",
     "rollup": "^3.26.2",
     "rollup-plugin-string": "^3.0.0",
     "tiny-sha256": "^1.0.2",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3"
   }
 }
