--- a/mods/package.json
+++ b/mods/package.json
@@ -18,6 +18,8 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.3",
     "core-js": "^3.46.0",
+    "esprima": "^4.0.1",
+    "estraverse": "^5.3.0",
     "rollup": "^3.26.2",
     "rollup-plugin-string": "^3.0.0",
     "tiny-sha256": "^1.0.2",
