--- a/mods/package.json
+++ b/mods/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.46.0",
     "esprima": "^4.0.1",
     "estraverse": "^5.3.0",
+    "qrcode-npm": "^0.0.3",
     "rollup": "^3.26.2",
     "rollup-plugin-string": "^3.0.0",
     "tiny-sha256": "^1.0.2",
