--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@foxreis/tizentube",
+  "name": "@jensorx/tizentube",
   "appName": "TizenTubeJX",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TizenTube is an ad-free and sponsor-free solution for your favourite streaming website on your Tizen (Samsung) TVs.",
   "packageType": "mods",
   "websiteURL": "https://youtube.com/tv?additionalDataUrl=http%3A%2F%2Flocalhost%3A8085%2Fdial%2Fapps%2FYouTube",
   "main": "dist/userScript.js",
-  "author": "Reis Can",
+  "author": "JensorX",
   "serviceFile": "dist/service.js",
   "keys": [
     "MediaPlayPause",
@@ -19,7 +19,19 @@
     "MediaTrackPrevious"
   ],
   "repository": {
-    "url": "https://github.com/reisxd/TizenTube"
+    "type": "git",
+    "url": "git+https://github.com/JensorX/TizenTube.git"
   },
-  "license": "GPL-3.0-only"
+  "license": "GPL-3.0-only",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/JensorX/TizenTube/issues"
+  },
+  "homepage": "https://github.com/JensorX/TizenTube#readme",
+  "dependencies": {
+    "ncc": "^0.3.6"
+  }
 }
