--- a/mods/package.json
+++ b/mods/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
-    "@rollup/plugin-node-resolve": "^16.0.3"
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-json": "^6.1.0"
   }
 }
